--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -350,7 +350,7 @@ $table-caption-color:         $text-muted !default;
 //
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
 
-$input-btn-padding-y:         rem(12);
+$input-btn-padding-y:         rem(7);
 $input-btn-padding-x:         rem(12);
 $input-btn-line-height:       $line-height-base !default;
 
